# fmri_first_level_proc

./: .gitignore  INPUT_SPECIFICATION.md  README.md  environment.yaml  example_config.yaml  example_subj.timing.csv  pyproject.toml
fmri_first_level_proc/: __init__.py  first_level_config.py  first_level_utils.py  rest_conn_first_level.py  run_first_level.py  task_act_first_level.py  task_conn_first_level.py
tests/: test_qc_summary.py
